# library-api

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  context.md  docker-compose.yml  env.example  pyproject.toml
docker/monitoring/grafana/: grafana.ini
docker/monitoring/prometheus/: prometheus.yml
docker/postgres/init/: 001_create_tables.sql
docs/: DECISOES_TECNICAS.md  LIDERANCA_COORDENACAO.md  PLANO_EVOLUCAO.md  metrics.md
docs/analise_tecnica_problema_1/: README.md  example.py
src/: main.py
src/application/service/: base_service.py
src/application/usecase/: livro_usecases.py  pessoa_usecases.py  usuario_usecases.py
src/domain/: exceptions.py
src/domain/enums/: emprestimo_status.py
src/domain/model/: emprestimo.py  livro.py  pessoa.py  usuario.py
src/domain/ports/: emprestimo_repository.py  livro_repository.py  pessoa_repository.py  unit_of_work.py  usuario_repository.py
src/infrastructure/cache/: redis_client.py
src/infrastructure/config/: exception_handlers.py  factories.py  logging_config.py  sqlalchemy_factory.py
src/infrastructure/monitoring/: metrics.py
src/presentation/controllers/: livro_controllers.py  pessoa_controllers.py  usuario_controllers.py
src/presentation/dto/: common.py  livro_dto.py  pessoa_dto.py  usuario_dto.py
src/presentation/routes/: livro_routes.py  pessoa_routes.py  usuario_routes.py
tests/: conftest.py  test_infrastructure.py
tests/application/: __init__.py
tests/application/service/: test_emprestimo_service.py  test_livro_service.py  test_pessoa_service.py  test_usuario_service.py
tests/application/usecase/: test_livro_usecases.py  test_pessoa_usecases.py  test_usuario_usecases.py
tests/infrastructure/: __init__.py
tests/infrastructure/config/: test_factories.py
tests/infrastructure/monitoring/: test_middleware.py
tests/infrastructure/repository/: test_emprestimo_repository.py  test_livro_repository.py  test_pessoa_repository.py  test_usuario_repository.py
tests/infrastructure/security/: test_auth.py
tests/presentation/: __init__.py
tests/presentation/controllers/: test_livro_controller.py  test_pessoa_controller.py  test_usuario_controller.py
tests/presentation/dto/: test_common_dto.py  test_livro_dto.py  test_pessoa_dto.py  test_usuario_dto.py
(+23 files in other folders)
